--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,15 @@ body {
 
 .headers {
     font-family: 'Montserrat', sans-serif;
+    font-size: calc(22px + (32 - 22) * ((100vw - 300px) / (1600 - 300)));
     text-transform: capitalize;
+    text-align: center;
 }
 
 
 .name, .text, .colophon, li{
     font-family: 'Roboto Mono', monospace;
+    font-size: calc(12px + (24 - 12) * ((100vw - 300px) / (1600 - 300)));
 }
 
 ul {
@@ -73,12 +76,13 @@ a:hover {
 
     h1 {
         -webkit-text-stroke: 1px black;
+        font-size: calc(26px + (56 - 26) * ((100vw - 300px) / (1600 - 300)));
     }
 }
 
 h1 {
     text-align: center;
-    /* font-size:  */
+    font-size: calc(26px + (56 - 26) * ((100vw - 300px) / (1600 - 300)));
 }
 
 .name, .header-text {
@@ -86,6 +90,10 @@ h1 {
 }
 
 /* nav */
+
+nav {
+    border-top: 2px solid whitesmoke;
+}
 
 .navbar {
     margin: 0;
@@ -146,6 +154,11 @@ figcaption {
 
 /* footer */
 
+.contact-section {
+    margin-top: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 .contacts {
     text-align: center; 
 }
@@ -157,4 +170,5 @@ figcaption {
 
 .colophon {
     text-align: center;
+    padding-bottom: 20px;
 }
