--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     --red: #fb2d09;
     --blue: #0f83bb;
     --body: #fbfbfb;
-    --fluid-text: calc(9px + (22 - 9) * ((100vw - 300px) / (1600 - 300)));
+    --fluid-text: calc(9px + (18 - 9) * ((100vw - 300px) / (1600 - 300)));
     --franklin: 'Franklin Gothic Heavy';
     --generalText: Arial, Helvetica, sans-serif;
     --bodyBg: #eaebee;
@@ -100,13 +100,14 @@ a:hover {
         margin-left: 30px;
         width: 20%;
     }
+
 }
 
 /* sections */
 
 .section {
     padding: 30px 0;
-    height: 100vh;
+ 
 }
 
 /* section1 */
@@ -116,11 +117,20 @@ a:hover {
     padding-top: 30px;
 }
 
+
 .bio-pic {
     /* display: block; */
     margin-top: -80px;
 }
 
+@media (max-width: 576px) {
+
+    .bio-pic {
+        display: block;
+        margin: -80px auto 0 auto;
+        width: 250px;
+    }
+}
 
 .highlight {
     font-weight: 900;
@@ -128,6 +138,7 @@ a:hover {
 
 .bio-text, .language-text {
     font-family: var(--generalText);
+    font-size: var(--fluid-text);
     font-weight: 100;
     text-align: justify;
 }
@@ -140,6 +151,7 @@ a:hover {
 .lang-list-item {
     padding: 8px 0;
     font-family: var(--generalText);
+    font-size: var(--fluid-text);
     font-weight: 200;
     color: #555;
     border-top: 1px solid #ccc;
@@ -165,12 +177,67 @@ a:hover {
     -webkit-text-stroke: 2px white;
 }
 
-.project-title {
+.project-title, .blog-title {
     color: #555;
 }
 
-.project-text {
+.project-text, .card-text {
     font-family: var(--generalText);
     font-size: var(--fluid-text);
     color: #777;
+}
+
+/* section3 */
+
+.blog-header {
+    text-align: center;
+}
+
+/* footer */
+
+.footer-logo {
+    display: block;
+    margin: 0 auto;
+    width: 15%;
+}
+
+.colophon {
+    text-align: center;
+}
+
+.social:hover, .email:hover {
+    color: var(--yellow);
+}
+
+.border {
+    display: flex;
+    align-items: flex-end;
+}
+
+.box {
+    width: 25%;
+}
+
+.yellow-box, .green-box {
+    height: 100px;
+}
+
+.red-box, .blue-box {
+    height: 80px;
+}
+
+.yellow-box {
+    background: var(--yellow);
+}
+
+.red-box {
+    background: var(--red);
+}
+
+.green-box {
+    background: var(--green);
+}
+
+.blue-box {
+    background: var(--blue);
 }
